--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
 
     <main>
       <!-- Main innhold: Hoved informasjon delt i seksjon inndelinger -->
-      <section>
+      <section class="hero">
         <!-- Hjem -->
         <h1>Lorem, ipsum dolor.</h1>
-        <div></div>
+        <div class="heroIntro">
           <img src="" alt="Profilbilde">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis.
-          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis.<p>
       </div>
       </section>
-      
+      </p>
       <section>
         <!-- Om meg -->
         <h2>Lorem ipsum dolor sit.
-        </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, fugit.
-        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.
         </p>
       </section>
